force downgrade to haskell-platform supported version 2.1.0.1
git-svn-id: file:///srv/repos/svn-packages/svn@71022 eb2447ed-0c53-47e4-bac8-5bc4a241df78

--- a/haskell-parsec/trunk/PKGBUILD
+++ b/haskell-parsec/trunk/PKGBUILD
@@ -1,14 +1,14 @@
 # Maintainer: Vesa Kaihlavirta <vesa@archlinux.org>
 # Contributor: Arch Haskell Team <arch-haskell@haskell.org>
 pkgname=haskell-parsec
-pkgver=3.0.1
-pkgrel=3
+pkgver=2.1.0.1
+pkgrel=1
 pkgdesc="Monadic parser combinators"
 url="http://hackage.haskell.org/cgi-bin/hackage-scripts/package/parsec"
 license=('custom:BSD3')
 arch=('i686' 'x86_64')
 depends=(ghc=6.12.1 sh 'haskell-mtl')
-options=('strip')
+options=('strip' 'force')
 source=(http://hackage.haskell.org/packages/archive/parsec/$pkgver/parsec-$pkgver.tar.gz)
 install=haskell-parsec.install
 
@@ -23,4 +23,5 @@ build() {
     runhaskell Setup copy --destdir=$pkgdir || return 1
     install -D -m644 LICENSE $pkgdir/usr/share/licenses/$pkgname/LICENSE || return 1
 }
-md5sums=('6b1ac06edfe73e23238333a6319e09e8')
+
+md5sums=('557d935019ec4d966f2103fdf1a8c559')
