--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -2,16 +2,17 @@
 # Maintainer: Jan de Groot <jgc@archlinux.org>
 
 pkgname=xdg-utils
-pkgver=1.0.2.20091216
+pkgver=1.0.2.20100303
 pkgrel=1
 pkgdesc='Command line tools that assist applications with a variety of desktop integration tasks.'
 arch=('any')
 url='http://portland.freedesktop.org/'
 depends=('sh')
 makedepends=('docbook-xsl' 'lynx' 'xmlto')
+optdepends=('xorg-utils: needed if using Xfce')
 license=('custom')
-source=("ftp://ftp.archlinux.org/other/${pkgname}/${pkgname}-${pkgver}.tar.gz")
-md5sums=('c1c48a257796a6324b16a75fd3aed45a')
+source=("ftp://ftp.archlinux.org/other/${pkgname}/${pkgname}-${pkgver}.tar.xz")
+md5sums=('b4a9ea7a85559fdebc06c2f703b5116f')
 
 build() {
 	cd ${srcdir}/${pkgname}-${pkgver}
@@ -20,6 +21,10 @@ build() {
 	make scripts html man || return 1
 	cd ..
 	make || return 1
+}
+
+package() {
+	cd ${srcdir}/${pkgname}-${pkgver}
 	make DESTDIR=${pkgdir} install || return 1
 	install -D -m644 LICENSE ${pkgdir}/usr/share/licenses/${pkgname}/LICENSE
 }
