--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -3,7 +3,7 @@
 
 pkgname=lighttpd
 pkgver=1.4.26
-pkgrel=1
+pkgrel=2
 pkgdesc='a secure, fast, compliant and very flexible web-server'
 license=('custom')
 arch=('i686' 'x86_64')
@@ -17,13 +17,17 @@ optdepends=('libxml2: mod_webdav'
 backup=('etc/lighttpd/lighttpd.conf' 'etc/logrotate.d/lighttpd')
 options=('!libtool' 'emptydirs')
 source=("http://download.lighttpd.net/lighttpd/releases-1.4.x/lighttpd-${pkgver}.tar.bz2"
-        'lighttpd.rc.d' 'lighttpd.logrotate.d')
+        'lighttpd.rc.d' 'lighttpd.logrotate.d' 'openssl-0.9.8m.patch')
 md5sums=('a682c8efce47a2f4263a247ba0813c9b'
          '789ed1b4521e72e591e09d5dfb99235a'
-         '857e174643fd7761a2f0d8431a679f6c')
+         '857e174643fd7761a2f0d8431a679f6c'
+         '37b7ca9883d5accaae84dcd7329576ae')
 
 build() {
 	cd $srcdir/$pkgname-$pkgver
+
+	# fixed in 1.4.27
+	patch -p0 -i ${srcdir}/openssl-0.9.8m.patch || return 1
 
 	./configure --prefix=/usr \
 		--libexecdir=/usr/lib/lighttpd/modules \
