--- a/zile/trunk/PKGBUILD
+++ b/zile/trunk/PKGBUILD
@@ -3,17 +3,17 @@
 # Maintainer: Kevin Piche <kevin@archlinux.org>
 
 pkgname=zile
-pkgver=2.3.14
+pkgver=2.3.15
 pkgrel=1
 pkgdesc="A small, fast, and powerful Emacs clone"
 arch=(i686 x86_64)
 url="http://www.gnu.org/software/zile/"
 # Lua is not required, the author uses it to generate some source files.
 makedepends=('help2man')
-depends=('ncurses>=5.6-7')
+depends=('ncurses')
 license=('GPL')
 source=(http://ftp.gnu.org/gnu/${pkgname}/${pkgname}-${pkgver}.tar.gz)
-md5sums=('88322abbb8146f3c4e7bb31fa4d351c6')
+md5sums=('2d9cfab3a7776e5e218b439fbef862a0')
 
 build() {
   cd ${srcdir}/${pkgname}-${pkgver}
