--- a/cmus/trunk/PKGBUILD
+++ b/cmus/trunk/PKGBUILD
@@ -3,19 +3,19 @@
 # Contributor: dorphell <dorphell@archlinux.org>
 
 pkgname=cmus
-pkgver=2.2.0
-pkgrel=11
+pkgver=2.3.0
+pkgrel=1
 pkgdesc="A very feature-rich ncurses-based music player"
 arch=('i686' 'x86_64')
 url="http://cmus.sourceforge.net/"
 license=('GPL')
 # namcap assured me it was safe to remove ncurses and the like... /shrug
-depends=(libao libmpcdec 'ffmpeg' flac libmad 'faad2>=2.7')
-source=(http://mirror.greaterscope.net/cmus/$pkgname-$pkgver.tar.bz2)
-md5sums=('7a9895ecfc10cd16577c73051436962f')
+depends=(libao libmpcdec 'ffmpeg' flac libmad 'faad2')
+source=(http://downloads.sourceforge.net/project/$pkgname/$pkgname-v$pkgver.tar.bz2)
+md5sums=('8039df4b08b9cbc2e050ab2922e6d99d')
 
 build() {
-  cd $srcdir/$pkgname-$pkgver
+  cd $srcdir/$pkgname-v$pkgver
   sed -i 's|ffmpeg/avcodec.h|libavcodec/avcodec.h|' ffmpeg.c || return 1
   sed -i 's|ffmpeg/avformat.h|libavformat/avformat.h|' ffmpeg.c || return 1
   sed -i 's|ffmpeg/avio.h|libavformat/avio.h|' ffmpeg.c || return 1
