--- a/openjdk6/trunk/PKGBUILD
+++ b/openjdk6/trunk/PKGBUILD
@@ -6,7 +6,7 @@ pkgname=('openjdk6' 'openjdk6-src')
 pkgbase="openjdk6"
 _date=20100129
 _javaver=6
-_icedteaver=1.7
+_icedteaver=1.7.1
 _openjdk_version=b17
 _openjdk_date=14_oct_2009
 #pkgver=${_javaver}.${_openjdk_version}_0.hg_${_date}
@@ -32,7 +32,7 @@ source=(http://icedtea.classpath.org/download/source/icedtea6-${_icedteaver}.tar
 	nonreparenting-wm.diff
 	openjdk6.profile)
 noextract=(openjdk-6-src-${_openjdk_version}-${_openjdk_date}.tar.gz ${_hotspotver}.tar.gz)
-md5sums=('56dce477d8363db4e20199990167ff06'
+md5sums=('40fb37998d40ee2c9aad6087348c6306'
          '078fe0ab744c98694decc77f2456c560'
          'd683eb501e7ce710198f20f0c127ebbb'
          '5da3e39fa60985576c4f37d1491efbe2'
@@ -43,6 +43,8 @@ md5sums=('56dce477d8363db4e20199990167ff06'
          '10d13b19762218ee157273cee874394e')
 
                 
+		############# PKG won't build with apache-ant 1.8.0-1 - downgrade it! ####################
+		
 # source PKGBUILD && mksource
 mksource() {
 	mkdir /tmp/icedtea6-${_date}
@@ -103,7 +105,7 @@ package_openjdk6() {
  pkgdesc='Free Java environment based on OpenJDK 6.0 with IcedTea6 replacing binary plugs.'
  backup=(etc/profile.d/openjdk6.sh)
  depends=('gcc-libs' 'xdg-utils' 'hicolor-icon-theme' 'ca-certificates-java' 'libxtst')
- optdepends=('nspr: for the browser plugin'
+ optdepends=('xulrunner: for the browser plugin'
             'gtk2: for the browser plugin'
             'alsa-lib: for sound'
             'giflib: for gif format support')
