--- a/xf86-video-ati/trunk/PKGBUILD
+++ b/xf86-video-ati/trunk/PKGBUILD
@@ -4,8 +4,8 @@
 
 pkgname=xf86-video-ati
 _gitdate=20100227
-pkgver=6.12.99.git${_gitdate} # see configure.ac
-#pkgver=6.12.4
+#pkgver=6.12.99.git${_gitdate} # see configure.ac
+pkgver=6.12.191
 pkgrel=1
 pkgdesc="X.org ati video driver"
 arch=(i686 x86_64)
@@ -17,11 +17,11 @@ makedepends=('pkgconfig' 'xorg-server>=1.7.3.902' 'fontsproto'
 conflicts=('xorg-server<1.7.0')
 groups=('xorg-video-drivers')
 options=('!libtool' 'force')
-source=(#${url}/releases/individual/driver/${pkgname}-${pkgver}.tar.bz2
-	ftp://ftp.archlinux.org/other/$pkgname/xf86-video-ati-${_gitdate}.tar.bz2
+source=(${url}/releases/individual/driver/${pkgname}-${pkgver}.tar.bz2
+	#ftp://ftp.archlinux.org/other/$pkgname/xf86-video-ati-${_gitdate}.tar.bz2
 	git_fixes.patch
 	LICENSE)
-md5sums=('51957109f7b23009d07bc57f4d40209d'
+md5sums=('998076ecb256b1bfc0177da2e239d8de'
          'f4f0fd376b02dde282d97ce9744b7795'
          '75da66945980a43adf1e1856271b9d4a')
 
@@ -36,12 +36,12 @@ mksource() {
 }
 
 build() {
-#  cd "${srcdir}/${pkgname}-${pkgver}"
+  cd "${srcdir}/${pkgname}-${pkgver}"
   # add commits until 20091226 from 6.12 branch
 #  patch -Np1 -i $srcdir/git_fixes.patch || return 1
-  cd "${srcdir}/${pkgname}"*
-  ./autogen.sh --prefix=/usr --enable-dri || return 1
-#  ./configure --prefix=/usr --enable-dri || return 1
+#  cd "${srcdir}/${pkgname}"*
+#  ./autogen.sh --prefix=/usr --enable-dri || return 1
+  ./configure --prefix=/usr --enable-dri || return 1
   make || return 1
   make "DESTDIR=${pkgdir}" install || return 1
   install -D -m644 "${srcdir}/LICENSE" "${pkgdir}/usr/share/licenses/${pkgname}/LICENSE"
