--- a/motion/trunk/PKGBUILD
+++ b/motion/trunk/PKGBUILD
@@ -3,7 +3,7 @@
 
 pkgname=motion
 pkgver=3.2.11.1
-pkgrel=3
+pkgrel=4
 pkgdesc="A software motion detector. It grabs images from video4linux devices and/or from webcams"
 arch=('i686' 'x86_64')
 license=('GPL')
@@ -14,7 +14,7 @@ source=(http://downloads.sourceforge.net/${pkgname}/${pkgname}-${pkgver}.tar.gz
 	'rc.motion'
 	'libjpeg-8.patch')
 md5sums=('4e729f129d8f9b9abaed5121c3cd0037'
-         'fc09828564850824f8549d258053e0b6'
+         '24b6fbfa586857b72f90cda81410c14f'
          '945a7da5e65156804d2446826d28dfbb')
 
 build() {
@@ -28,8 +28,11 @@ build() {
     --with-libavcodec=/usr/lib/ \
     --sysconfdir=/etc/motion || return 1
   make || return 1
+}
+
+package(){
+  cd "${srcdir}/${pkgname}-${pkgver}"
   make DESTDIR="${pkgdir}" install || return 1
 
-  install -m755 -d "${pkgdir}/etc/rc.d"
-  install -m755 "${srcdir}/rc.motion" "${pkgdir}/etc/rc.d/motion" || return 1
+  install -Dm755 "${srcdir}/rc.motion" "${pkgdir}/etc/rc.d/motion" || return 1
 }
