update to PHP 5.3.2
git-svn-id: file:///srv/repos/svn-packages/svn@71135 eb2447ed-0c53-47e4-bac8-5bc4a241df78

--- a/php/trunk/PKGBUILD
+++ b/php/trunk/PKGBUILD
@@ -21,9 +21,9 @@ pkgname=('php'
          'php-sqlite'
          'php-tidy'
          'php-xsl')
-pkgver=5.3.1
-pkgrel=7
-_suhosinver=${pkgver}-0.9.8
+pkgver=5.3.2
+pkgrel=1
+_suhosinver=${pkgver}-0.9.9
 arch=('i686' 'x86_64')
 license=('PHP')
 url='http://www.php.net'
@@ -34,13 +34,12 @@ makedepends=('apache' 'imap' 'postgresql-libs' 'mysql' 'libldap' 'postfix'
 options=('!makeflags')
 source=("http://www.php.net/distributions/${pkgbase}-${pkgver}.tar.bz2"
         "http://download.suhosin.org/suhosin-patch-${_suhosinver}.patch.gz"
-        'php.ini.patch' 'apache.conf' 'db-configure.patch' 'mysqlnd-socket.patch')
-md5sums=('63e97ad450f0f7259e785100b634c797'
-         'bf75fe3a9bda8c7a041d86197d6da09a'
+        'php.ini.patch' 'apache.conf' 'db-configure.patch')
+md5sums=('46f500816125202c48a458d0133254a4'
+         'dec154e470dc22f4a88a39d591e11f2c'
          'd6f94150f47047882c6716575e12e99b'
          '96ca078be6729b665be8a865535a97bf'
-         'cd3d068931c3715e35634e9885e35374'
-         '65aaf083ff570fa19ffb4679bdda1ada')
+         'e04e6a3abf327dd40ddb2b7dc21677c4')
 
 build() {
 	# ldap-sasl does not compile with --as-needed
@@ -135,10 +134,6 @@ build() {
 
 	# avoid linking against old db version
 	patch -p0 -i ${srcdir}/db-configure.patch || return 1
-
-	# use /var/run/mysqld/mysqld.sock as default socket for mysql
-	# Review if this is still needed in 5.3.2
-	patch -p0 -i ${srcdir}/mysqlnd-socket.patch || return 1
 
 	# apply suhosin patch
 	patch -p1 -i ${srcdir}/suhosin-patch-${_suhosinver}.patch || return 1
