revert removing libgnome
git-svn-id: file:///srv/repos/svn-packages/svn@71149 eb2447ed-0c53-47e4-bac8-5bc4a241df78

--- a/gnome-terminal/trunk/PKGBUILD
+++ b/gnome-terminal/trunk/PKGBUILD
@@ -7,7 +7,7 @@ pkgrel=1
 pkgdesc="The GNOME Terminal Emulator"
 arch=(i686 x86_64)
 license=('GPL')
-depends=('gconf>=2.28.0' 'vte>=0.23.5' 'libsm')
+depends=('gconf>=2.28.0' 'vte>=0.23.5' 'libgnome' 'libsm')
 makedepends=('pkgconfig' 'gnome-doc-utils>=0.18.0' 'intltool') 
 options=('!emptydirs')
 url="http://www.gnome.org"
