--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -7,7 +7,7 @@ pkgrel=1
 pkgdesc="The GNOME Terminal Emulator"
 arch=(i686 x86_64)
 license=('GPL')
-depends=('gconf>=2.28.0' 'vte>=0.23.5' 'libsm')
+depends=('gconf>=2.28.0' 'vte>=0.23.5' 'libgnome' 'libsm')
 makedepends=('pkgconfig' 'gnome-doc-utils>=0.18.0' 'intltool') 
 options=('!emptydirs')
 url="http://www.gnome.org"
