--- a/kdeadmin/trunk/PKGBUILD
+++ b/kdeadmin/trunk/PKGBUILD
@@ -7,7 +7,7 @@ pkgname=('kdeadmin-kcron'
          'kdeadmin-kuser'
          'kdeadmin-system-config-printer-kde')
 pkgver=4.4.1
-pkgrel=1
+pkgrel=2
 arch=('i686' 'x86_64')
 url='http://www.kde.org'
 license=('GPL' 'LGPL' 'FDL')
@@ -15,13 +15,18 @@ groups=('kde' 'kdeadmin')
 makedepends=('pkgconfig' 'cmake' 'automoc4' 'kdepimlibs' 'kdebase-runtime'
              'kdebindings-python' 'system-config-printer-common' 'kdepim-runtime')
 source=("http://download.kde.org/stable/${pkgver}/src/${pkgbase}-${pkgver}.tar.bz2"
-	'fix-syslog-path.patch')
+	'fix-syslog-path.patch'
+	'fix-when-accessing-the-KCM.patch')
 md5sums=('6a69c96bf7ad38ea78972e926a2281e7'
-         '41b71823c7a33975ec08aaf75d67a374')
+         '41b71823c7a33975ec08aaf75d67a374'
+	 '3d79416bd7ac5a04f3ceae5529279c50')
 
 build() {
-	cd $srcdir/${pkgbase}-${pkgver}
+	cd ${srcdir}/${pkgbase}-${pkgver}
 	patch -p1 -i ${srcdir}/fix-syslog-path.patch || return 1
+
+	# fixed in 4.4.2
+	patch -Np3 -i ${srcdir}/fix-when-accessing-the-KCM.patch || return 1
 
 	cd ${srcdir}
 	mkdir build
