--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -1,19 +1,20 @@
 # $Id$
-# Maintainer : Ionut Biru <ionut@archlinux.ro>
+# Maintainer : Ionut Biru <ibiru@archlinux.org>
 # Contributor: Hugo Doria <hugo@archlinux.org>
 
 pkgname=deluge
 pkgver=1.2.1
-pkgrel=1
+pkgrel=2
 pkgdesc="A bittorrent client written with python and pygtk"
 arch=('i686' 'x86_64')
 url="http://deluge-torrent.org/"
 license=('GPL3')
-depends=('pyxdg' 'dbus-python' 'setuptools' 'libtorrent-rasterbar>=0.14.9' 'twisted' 'pyopenssl' 'xdg-utils' 'python-chardet')
+depends=('pyxdg' 'setuptools' 'libtorrent-rasterbar>=0.14.9' 'twisted' 'pyopenssl' 'python-chardet')
 makedepends=( 'intltool' 'pygtk' 'librsvg' 'python-mako')
 optdepends=('python-notify: libnotify notifications'
 	    'pygtk: needed for gtk ui'
 	    'librsvg: needed for gtk ui'
+	    'xdg-utils: needed for gtk ui'
 	    'python-mako: needed for web ui')
 source=(http://download.deluge-torrent.org/source/${pkgname}-${pkgver}.tar.bz2 deluged deluged.conf.d deluge-web)
 install=deluge.install
@@ -25,7 +26,7 @@ build() {
   cd "${srcdir}/${pkgname}-${pkgver}"
 
   python setup.py build || return 1
-  python setup.py install --prefix=/usr --root="${pkgdir}" || return 1
+  python setup.py install --prefix=/usr --root="${pkgdir}" --optimize=1 || return 1
 
   install -d -m755 "${pkgdir}"/srv/deluge || return 1
   install -D -m644 deluge/data/pixmaps/deluge.svg "${pkgdir}"/usr/share/pixmaps/deluge.svg || return 1
