upgpkg: deluge 1.2.1-2 xdg-utils is used in .install
git-svn-id: file:///srv/repos/svn-packages/svn@71189 eb2447ed-0c53-47e4-bac8-5bc4a241df78

--- a/deluge/trunk/PKGBUILD
+++ b/deluge/trunk/PKGBUILD
@@ -9,12 +9,11 @@ pkgdesc="A bittorrent client written with python and pygtk"
 arch=('i686' 'x86_64')
 url="http://deluge-torrent.org/"
 license=('GPL3')
-depends=('pyxdg' 'setuptools' 'libtorrent-rasterbar>=0.14.9' 'twisted' 'pyopenssl' 'python-chardet')
+depends=('pyxdg' 'setuptools' 'libtorrent-rasterbar>=0.14.9' 'twisted' 'pyopenssl' 'xdg-utils' 'python-chardet')
 makedepends=( 'intltool' 'pygtk' 'librsvg' 'python-mako')
 optdepends=('python-notify: libnotify notifications'
 	    'pygtk: needed for gtk ui'
 	    'librsvg: needed for gtk ui'
-	    'xdg-utils: needed for gtk ui'
 	    'python-mako: needed for web ui')
 source=(http://download.deluge-torrent.org/source/${pkgname}-${pkgver}.tar.bz2 deluged deluged.conf.d deluge-web)
 install=deluge.install
