upgpkg: cairo 1.8.10-1 Update to 1.8.10
git-svn-id: file:///srv/repos/svn-packages/svn@71210 eb2447ed-0c53-47e4-bac8-5bc4a241df78

--- a/cairo/trunk/PKGBUILD
+++ b/cairo/trunk/PKGBUILD
@@ -3,17 +3,17 @@
 # Contributor: Brice Carpentier <brice@daknet.org>
 
 pkgname=cairo
-pkgver=1.8.8
-pkgrel=2
+pkgver=1.8.10
+pkgrel=1
 pkgdesc="Cairo vector graphics library"
 arch=(i686 x86_64)
 license=('LGPL' 'MPL')
 url="http://cairographics.org/"
-depends=('libpng>=1.4.0' 'libxrender' 'fontconfig>=2.8.0' 'pixman>=0.16.4' 'xcb-util>=0.3.6')
+depends=('libpng>=1.4.0' 'libxrender' 'fontconfig>=2.8.0' 'pixman>=0.16.6' 'xcb-util>=0.3.6')
 makedepends=('pkgconfig' 'gtk-doc')
 options=('!libtool')
 source=(http://cairographics.org/releases/${pkgname}-${pkgver}.tar.gz)
-md5sums=('d3e1a1035ae563812d4dd44a74fb0dd0')
+sha1sums=('fd5e8ca82ff0e8542ea4c51612cad387f2a49df3')
 
 build() {
   cd "${srcdir}/${pkgname}-${pkgver}"
