--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -1,26 +1,26 @@
 # $Id$
-# Maintainer: Biru Ionut <ionut@archlinux.ro>
+# Maintainer: Ionut Biru <ibiru@archlinux.org>
 # Contributor: Timm Preetz <timm@preetz.us>
 pkgname=telepathy-haze
-pkgver=0.3.3
+pkgver=0.3.4
 pkgrel=1
 pkgdesc="A telepathy-backend to use libpurple (Pidgin) protocols."
 arch=('i686' 'x86_64')
 url="http://telepathy.freedesktop.org"
 license=('GPL')
-depends=('telepathy-glib>=0.10.0' 'libpurple>=2.6.3')
+depends=('telepathy-glib>=0.10.0' 'libpurple>=2.6.6')
+makedepends=('libxslt')
 groups=('telepathy')
 source=(http://telepathy.freedesktop.org/releases/$pkgname/$pkgname-$pkgver.tar.gz)
+md5sums=('100b022f14165c2097f530139a02693b')
 
 build() {
   cd "$srcdir/$pkgname-$pkgver"
   ./configure --prefix=/usr \
-  	--libexecdir=/usr/lib/telepathy \
-	--enable-shave
+  	--libexecdir=/usr/lib/telepathy || return 1
   make || return 1
   make DESTDIR="$pkgdir" install || return 1
 
   #remove manager, upstream suggested and it would be removed in the near future
   rm -rf "$pkgdir/usr/share/telepathy/managers"
 }
-md5sums=('70c2f26290bd2c6782f2d4fc14454a70')
