--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -2,16 +2,16 @@
 # Maintainer: Jan de Groot <jgc@archlinux.org>
 
 pkgname=libcaca
-pkgver=0.99.beta16
+pkgver=0.99.beta17
 pkgrel=1
 pkgdesc="Color AsCii Art library"
 arch=('i686' 'x86_64')
 license=('LGPL')
 url="http://libcaca.zoy.org/"
-depends=('imlib2' 'ncurses>=5.6-7')
-options=(!libtool)
+depends=('imlib2' 'ncurses>=5.7')
+options=(!libtool !emptydirs)
 source=(http://libcaca.zoy.org/files/libcaca/${pkgname}-${pkgver}.tar.gz)
-md5sums=('3953bf4a803747b63a99f50125563151')
+md5sums=('790d6e26b7950e15909fdbeb23a7ea87')
 
 build() {
   cd "${srcdir}/${pkgname}-${pkgver}"
@@ -20,5 +20,4 @@ build() {
     --disable-cxx --disable-gl --disable-csharp || return 1
   make || return 1
   make DESTDIR="${pkgdir}" install || return 1
-  rmdir "${pkgdir}/usr/lib/caca-sharp"
 }
