upgpkg: kmplayer 0.11.2-1 upstream release
git-svn-id: file:///srv/repos/svn-packages/svn@71278 eb2447ed-0c53-47e4-bac8-5bc4a241df78

--- a/kmplayer/trunk/PKGBUILD
+++ b/kmplayer/trunk/PKGBUILD
@@ -3,7 +3,7 @@
 # Contributor: damir <damir@archlinux.org>
 
 pkgname=kmplayer
-pkgver=0.11.1b
+pkgver=0.11.2
 pkgrel=1
 pkgdesc="Video player plugin for Konqueror and basic MPlayer/Xine/ffmpeg/ffserver/VDR frontend for KDE"
 arch=('i686' 'x86_64')
@@ -11,9 +11,9 @@ license=('GPL' 'LGPL' 'FDL')
 url="http://kmplayer.kde.org"
 depends=('kdebase-runtime' 'gtk2')
 makedepends=('pkgconfig' 'cmake' 'automoc4')
+install=${pkgname}.install
 source=("http://kmplayer.kde.org/pkgs/$pkgname-$pkgver.tar.bz2")
-md5sums=('a6b2c9dd8650e36cd6521d152bb5d9c9')
-options=('force')
+md5sums=('ff47bee19df493ffb690df18dcba6e19')
 
 build() {
   cd ${srcdir}
@@ -23,6 +23,10 @@ build() {
     -DCMAKE_BUILD_TYPE=Release \
     -DCMAKE_INSTALL_PREFIX=/usr
   make || return 1
+}
+
+package() {
+  cd ${srcdir}/build
   make DESTDIR=${pkgdir} install
 
   # icons are included in oxygen-icons
