git-svn-id: file:///srv/repos/svn-packages/svn@71283 eb2447ed-0c53-47e4-bac8-5bc4a241df78

--- a/mc/trunk/PKGBUILD
+++ b/mc/trunk/PKGBUILD
@@ -5,7 +5,7 @@
 # Maintainer: Daniel J Griffiths <ghost1227@archlinux.us>
 
 pkgname=mc
-pkgver=4.7.0.3
+pkgver=4.7.1
 pkgrel=1
 pkgdesc="A filemanager/shell that emulates Norton Commander"
 arch=('i686' 'x86_64')
@@ -19,7 +19,7 @@ conflicts=('mc-utf8')
 replaces=('mc-utf8')
 options=('!emptydirs' '!makeflags')
 source=(http://www.midnight-commander.org/downloads/${pkgname}-${pkgver}.tar.bz2)
-md5sums=('4ad6ed6667ab2364992285712e3207ea')
+md5sums=('5bd69a47b4a0bd6904623a50863b1eeb')
 
 build() {
 	cd ${srcdir}/${pkgname}-${pkgver}
@@ -42,8 +42,8 @@ package() {
 
 	# Fix FS#15177
 	sed -i 's|op_has_zipinfo = 0|op_has_zipinfo = 1|' \
-	    ${pkgdir}/usr/share/mc/extfs/uzip
+	    ${pkgdir}/usr/lib/mc/extfs.d/uzip
 
 	# Fix FS#18312
-	rm ${pkgdir}/usr/share/mc/extfs/u7z
+	rm ${pkgdir}/usr/lib/mc/extfs.d/u7z
 }
