--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -5,7 +5,7 @@ pkgname=licenses
 pkgver=2.5
 pkgrel=1
 pkgdesc="The standard licenses distribution package"
-arch=('i686' 'x86_64')
+arch=('any')
 license=('custom:none')
 url="http://archlinux.org"
 groups=('base')
