looks like a good any candidate
git-svn-id: file:///srv/repos/svn-packages/svn@71298 eb2447ed-0c53-47e4-bac8-5bc4a241df78

--- a/licenses/trunk/PKGBUILD
+++ b/licenses/trunk/PKGBUILD
@@ -5,7 +5,7 @@ pkgname=licenses
 pkgver=2.5
 pkgrel=1
 pkgdesc="The standard licenses distribution package"
-arch=('i686' 'x86_64')
+arch=('any')
 license=('custom:none')
 url="http://archlinux.org"
 groups=('base')
