Add /etc/conf.d/apache support
git-svn-id: file:///srv/repos/svn-packages/svn@71310 eb2447ed-0c53-47e4-bac8-5bc4a241df78

--- a/apache/trunk/PKGBUILD
+++ b/apache/trunk/PKGBUILD
@@ -10,7 +10,7 @@ arch=('i686' 'x86_64')
 options=('!libtool')
 url='http://www.apache.org/dist/httpd'
 license=('APACHE')
-backup=(etc/httpd/conf/httpd.conf
+backup=(etc/conf.d/apache etc/httpd/conf/httpd.conf
         etc/httpd/conf/extra/httpd-{autoindex,dav,default,info,languages}.conf
         etc/httpd/conf/extra/httpd-{manual,mpm,multilang-errordoc}.conf
         etc/httpd/conf/extra/httpd-{ssl,userdir,vhosts}.conf
@@ -28,6 +28,8 @@ source=(http://www.apache.org/dist/httpd/httpd-${pkgver}.tar.bz2
         ${_itkurl}/08-max-clients-per-vhost.patch
         ${_itkurl}/09-capabilities.patch
         ${_itkurl}/10-nice.patch
+        apachectl-confd.patch
+        apache.conf.d
         httpd.logrotate
         httpd
         arch.layout)
@@ -41,12 +43,16 @@ md5sums=('a5226203aaf97e5b941c41a71c112704'
          '9f7a8935f9cabc7b46d0052906634cef'
          '1b28e3363e1b0d05b738a21e7ddd264f'
          'd9667fcd2ffecc63e446edd4d6666731'
+         '4ac64df6e019edbe137017cba1ff2f51'
+         '08b3c875f6260644f2f52b4056d656b0'
          'f4d627c64024c1b7b95efb5ffbaa625e'
          '9e001fbb082a08113e7f4bc431085c11'
          '3d659d41276ba3bfcb20c231eb254e0c')
 
 build() {
 	cd "${srcdir}/httpd-${pkgver}"
+
+  patch -Np0 -i "${srcdir}/apachectl-confd.patch" || return 1
 
 	# set default user
 	sed -e 's#User daemon#User http#' \
@@ -107,6 +113,7 @@ build() {
 
 	install -D -m755 "${srcdir}/httpd" "${pkgdir}/etc/rc.d/httpd" || return 1
 	install -D -m644 "${srcdir}/httpd.logrotate" "${pkgdir}/etc/logrotate.d/httpd" || return 1
+  install -D -m644 "${srcdir}/apache.conf.d" "${pkgdir}/etc/conf.d/apache" || return 1
 
 	# symlinks for /etc/httpd
 	ln -fs /var/log/httpd "${pkgdir}/etc/httpd/logs"
