upgpkg: gtkpod 0.99.14.030610-1 rebuilt and patched for mp4v2 1.9.1
git-svn-id: file:///srv/repos/svn-packages/svn@71350 eb2447ed-0c53-47e4-bac8-5bc4a241df78

--- a/gtkpod/trunk/PKGBUILD
+++ b/gtkpod/trunk/PKGBUILD
@@ -1,22 +1,28 @@
 # $Id$
-# Maintainer: Aaron Griffin <aaron@archlinux.org>
+# Maintainer: Kevin Piche <kevin@archlinux.org>
+# Contributor: Aaron Griffin <aaron@archlinux.org>
 
 pkgname=gtkpod
-pkgver=0.99.14
+pkgver=0.99.14.030610
 pkgrel=1
-pkgdesc="a platform independent GUI for Apple's iPod using GTK2"
-arch=(i686 x86_64)
+pkgdesc="A platform independent GUI for Apple's iPod using GTK2"
+arch=('i686' 'x86_64')
 license=('GPL')
 url="http://gtkpod.sourceforge.net"
-install=gtkpod.install
+install=${pkgname}.install
 depends=('libgpod>=0.7.0' 'libmp4v2' 'flac' 'libid3tag' 'gnome-vfs' 'libgnomecanvas' 'flac' 'libvorbis' 'curl' 'libglade')
 makedepends=('intltool')
-source=(http://downloads.sourceforge.net/${pkgname}/${pkgname}-${pkgver}.tar.gz)
-md5sums=('f7948eceb955b302f4c47da4c0e1ec12')
+source=("http://ftp.archlinux.org/other/${pkgname}/${pkgname}-${pkgver}.tar.bz2")
+md5sums=('ebe076cc8b623c3ae6b0f0f733019eec')
 
 build() {
-  cd "${srcdir}/${pkgname}-${pkgver}"
+  cd ${srcdir}/${pkgname}
+  ./autogen.sh
   ./configure --prefix=/usr || return 1
   make || return 1
+}
+
+package() {
+  cd ${srcdir}/${pkgname}
   make DESTDIR="${pkgdir}" install || return 1
 }
