implement FS#18559, moving gnome-panel to optdepends since is needed only for gdm-user-switch-applet
git-svn-id: file:///srv/repos/svn-packages/svn@71382 eb2447ed-0c53-47e4-bac8-5bc4a241df78

--- a/gdm/trunk/PKGBUILD
+++ b/gdm/trunk/PKGBUILD
@@ -10,8 +10,9 @@ url="http://www.gnome.org"
 backup=('etc/pam.d/gdm' 'etc/pam.d/gdm-autologin' 'etc/gdm/custom.conf')
 groups=('gnome-extra')
 options=('!libtool')
-depends=('libcanberra>=0.21' 'gnome-panel>=2.29.6' 'libxklavier>=5.0' 'tcp_wrappers' 'gnome-session>=2.29.6' 'devicekit-power>=013')
-makedepends=('intltool' 'gnome-doc-utils>=0.18.0' 'xorg-server')
+depends=('libcanberra>=0.21' 'libxklavier>=5.0' 'tcp_wrappers' 'gnome-session>=2.29.6' 'devicekit-power>=013')
+makedepends=('intltool' 'gnome-doc-utils>=0.18.0' 'xorg-server' 'gnome-panel>=2.29.6')
+optdepends=('gnome-panel: needed for user switch applet')
 conflicts=('fast-user-switch-applet')
 replaces=('fast-user-switch-applet')
 install=gdm.install
