added auto detection of compiled rules and running of sa-update (FS#17731)
git-svn-id: file:///srv/repos/svn-packages/svn@71393 eb2447ed-0c53-47e4-bac8-5bc4a241df78

--- a/spamassassin/trunk/PKGBUILD
+++ b/spamassassin/trunk/PKGBUILD
@@ -4,7 +4,7 @@
 
 pkgname=spamassassin
 pkgver=3.3.0
-pkgrel=1
+pkgrel=2
 pkgdesc="A mail filter to identify spam."
 arch=(i686 x86_64)
 license=(APACHE)
@@ -15,7 +15,8 @@ depends=('perl>=5.10.0' 'perl-net-dns' 'perl-uri' 'perl-html-parser' \
 		'perl-archive-tar' 'zlib' 're2c')
 makedepends=('razor' 'perl-dbi') 
 optdepends=('razor: to identify collaborately-flagged spam'
-	    'gnupg: gpg support, without this use --nogpg flag for sa-update')
+	    'gnupg: gpg support, without this use --nogpg flag for sa-update'
+            're2c: regexp compiler, for compiling rules with sa-compile')
 backup=(etc/conf.d/spamd etc/mail/spamassassin/local.cf \
 	etc/mail/spamassassin/init.pre \
 	etc/mail/spamassassin/v310.pre \
