upgpkg: srcpac 0.7-1 released srcpac 0.7
git-svn-id: file:///srv/repos/svn-packages/svn@71413 eb2447ed-0c53-47e4-bac8-5bc4a241df78

--- a/srcpac/trunk/PKGBUILD
+++ b/srcpac/trunk/PKGBUILD
@@ -3,19 +3,21 @@
 # Contributor: Jason Chu <jason@archlinux.org>
 
 pkgname=srcpac
-pkgver=0.6
-pkgrel=2
+pkgver=0.7
+pkgrel=1
 pkgdesc="The pacman from-source wrapper"
 arch=('any')
 url="http://projects.archlinux.org/srcpac.git/"
 license=('GPL')
 depends=('bash' 'pacman' 'abs' 'sudo')
-source=(ftp://ftp.archlinux.org/other/${pkgname}/${pkgname}-${pkgver}.tar.gz)
-md5sums=('a45caa62010ffb9afcf24a50efc85220')
+source=(http://ftp.archlinux.org/other/${pkgname}/${pkgname}-${pkgver}.tar.gz)
+md5sums=('1b6f8d13fbef832ced40ebe60b51e06a')
 
 build() {
+  /bin/true
+}
+
+package() {
   cd ${srcdir}/${pkgname}-${pkgver}
-  install -d ${pkgdir}/etc/srcpac.d
-  install -Dm 755 srcpac ${pkgdir}/usr/bin/srcpac || return 1
-  install -Dm 644 srcpac.1 ${pkgdir}/usr/share/man/man1/srcpac.1 || return 1
+  make DESTDIR=${pkgdir} install || return 1
 }
