implemented TOMCAT_JAVA_HOME in /etc/conf.d/tomcat, closing FS#15417
git-svn-id: file:///srv/repos/svn-packages/svn@71421 eb2447ed-0c53-47e4-bac8-5bc4a241df78

--- a/tomcat/trunk/PKGBUILD
+++ b/tomcat/trunk/PKGBUILD
@@ -3,21 +3,21 @@
 
 pkgname=tomcat
 pkgver=5.5.28
-pkgrel=1
+pkgrel=2
 arch=('i686' 'x86_64')
 pkgdesc="Servlet container for Java Servlet and JavaServer Pages"
 url="http://tomcat.apache.org/"
 license=('APACHE')
 depends=('java-environment')
-makedepends=('java-environment')
+makedepends=('openjdk6')
 backup=('opt/tomcat/conf/server.xml' 'opt/tomcat/conf/tomcat-users.xml' 'etc/conf.d/tomcat')
 install=tomcat.install
 source=(http://archive.apache.org/dist/tomcat/tomcat-5/v${pkgver}/bin/apache-tomcat-${pkgver}.tar.gz
 	'tomcat'
 	'tomcat.conf.d')
 md5sums=('ffe786075c2cdd9c1fde7640bce79d35'
-         'a9617b3c9b0227b1323e1a4f7468516a'
-         '4da263803378b208144183c9f7df66a7')
+         '20e6a8e89a148e2b0ac81ca03ceea6b1'
+         '368322d8a51ce20cc5dbdb505706a16a')
 
 build() {
   unset LDFLAGS
@@ -38,7 +38,7 @@ build() {
   mkdir -p ${pkgdir}/opt/tomcat
   cp -R * ${pkgdir}/opt/tomcat
   install -D -m755 ${srcdir}/tomcat ${pkgdir}/etc/rc.d/tomcat
-  install -D -m755 ${srcdir}/tomcat.conf.d ${pkgdir}/etc/conf.d/tomcat
+  install -D -m644 ${srcdir}/tomcat.conf.d ${pkgdir}/etc/conf.d/tomcat
   chgrp -R 66 ${pkgdir}/opt/tomcat/conf ${pkgdir}/opt/tomcat/work
   chmod 0660 ${pkgdir}/opt/tomcat/conf/{*.xml,*.policy,*.properties,/Catalina/localhost/*.xml}
   chmod 775 ${pkgdir}/opt/tomcat/conf ${pkgdir}/opt/tomcat/work
