upgpkg: windowmaker-crm-git 20100307-1 New git snapshot with several bugfixes and new features.
git-svn-id: file:///srv/repos/svn-packages/svn@71465 eb2447ed-0c53-47e4-bac8-5bc4a241df78

--- a/windowmaker-crm-git/trunk/PKGBUILD
+++ b/windowmaker-crm-git/trunk/PKGBUILD
@@ -2,8 +2,8 @@
 # Maintainer: Daniel Isenmann <daniel@archlinux.org>
 
 pkgname=windowmaker-crm-git
-pkgver=20091221
-pkgrel=2
+pkgver=20100307
+pkgrel=1
 pkgdesc="An X11 window manager with a NEXTSTEP look and feel - git version from Carlos R. Mafra"
 arch=(i686 x86_64)
 url="http://www.windowmaker.info/"
@@ -13,8 +13,8 @@ options=('!libtool')
 provides=('windowmaker')
 conflicts=('windowmaker')
 source=(ftp://ftp.archlinux.org/other/windowmaker/windowmaker-$pkgver.tar.gz libpng-1.4.patch)
-md5sums=('2cc3b4630f52025b78285eda39d62681' '1b7c47827419ef62051c0f1c02cb45f0')
-sha1sums=('8c101e75aa1f98867484510898f4c3369f9be386' 'c446bdb3a8c0d7add45ad6dff05c382cb14ee2b6')
+md5sums=('43b2bfd300d37158ff4f27b4123404d9'
+         '1b7c47827419ef62051c0f1c02cb45f0')
 
 build() {
   cd $srcdir/windowmaker-$pkgver
