upgpkg: perl-event-rpc 1.01-1 Added as dvdrip dep
git-svn-id: file:///srv/repos/svn-packages/svn@71508 eb2447ed-0c53-47e4-bac8-5bc4a241df78

--- a/perl-event-rpc/trunk/PKGBUILD
+++ b/perl-event-rpc/trunk/PKGBUILD
@@ -9,7 +9,7 @@ pkgdesc="Event based transparent Client/Server RPC framework"
 arch=('any')
 url="http://www.exit1.org/Event-RPC/"
 license=('GPL' 'PerlArtistic')
-depends=('perl')
+depends=('perl-event' 'perl-io-socket-ssl')
 options=('!emptydirs')
 source=(http://www.exit1.org/packages/Event-RPC/dist/Event-RPC-${pkgver}.tar.gz)
 md5sums=('c9d5ca39ef815ce179dd28981342b8fe')
