--- a/barcode/trunk/PKGBUILD
+++ b/barcode/trunk/PKGBUILD
@@ -4,7 +4,7 @@
 pkgname=barcode
 pkgver=0.98
 pkgrel=2
-pkgdesc="A tool to convert text strings to printed bars."
+pkgdesc="A tool to convert text strings to printed bars"
 arch=('i686' 'x86_64')
 url="http://www.gnu.org/software/barcode/barcode.html"
 license=('GPL')
