upstream update to 1.4.20
git-svn-id: file:///srv/repos/svn-packages/svn@71648 eb2447ed-0c53-47e4-bac8-5bc4a241df78

--- a/squirrelmail/trunk/PKGBUILD
+++ b/squirrelmail/trunk/PKGBUILD
@@ -3,7 +3,7 @@
 # Contributor: Manolis Tzanidakis <manolis@archlinux.org>
 
 pkgname=squirrelmail
-pkgver=1.4.19
+pkgver=1.4.20
 pkgrel=1
 pkgdesc="Webmail for Nuts!"
 arch=(i686 x86_64)
@@ -13,8 +13,9 @@ depends=('php' 'perl' 'imap-server')
 makedepends=('findutils')
 backup=(srv/http/squirrelmail/.htaccess srv/http/squirrelmail/config/config.php)
 install=$pkgname.install
-source=(http://dl.sf.net/sourceforge/$pkgname/$pkgname-$pkgver.tar.gz)
+source=(http://superb-sea2.dl.sf.net/sourceforge/$pkgname/$pkgname-$pkgver.tar.gz)
 options=('force')
+md5sums=('60ffedc61b295650c7695c2b74209294')
 
 build() {
   # install
@@ -48,4 +49,3 @@ build() {
     || return 1
 }
 # vim: ts=2 sw=2 et ft=sh
-md5sums=('bf71b282361cd9fe65781bb17ecd7704')
