upgpkg: strigi 0.7.2-2 rebuilt with exiv2 0.19
git-svn-id: file:///srv/repos/svn-packages/svn@71665 eb2447ed-0c53-47e4-bac8-5bc4a241df78

--- a/strigi/trunk/PKGBUILD
+++ b/strigi/trunk/PKGBUILD
@@ -4,7 +4,7 @@
 
 pkgname=strigi
 pkgver=0.7.2
-pkgrel=1
+pkgrel=2
 pkgdesc="Fast crawling desktop search engine with Qt4 GUI"
 arch=('i686' 'x86_64')
 url="http://www.vandenoever.info/software/strigi/"
@@ -24,5 +24,9 @@ build() {
     -DCMAKE_INSTALL_PREFIX=/usr \
     -DENABLE_INOTIFY=ON
   make || return 1
+}
+
+package() {
+  cd ${srcdir}/build
   make DESTDIR=$pkgdir install || return 1
 }
