git-svn-id: file:///srv/repos/svn-packages/svn@71668 eb2447ed-0c53-47e4-bac8-5bc4a241df78

--- a/ntop/trunk/PKGBUILD
+++ b/ntop/trunk/PKGBUILD
@@ -3,7 +3,7 @@
 
 pkgname=ntop
 pkgver=3.3.10
-pkgrel=1.1
+pkgrel=2
 pkgdesc="A network traffic probe that shows the network usage"
 arch=('i686' 'x86_64')
 license=('GPL')
@@ -11,7 +11,7 @@ url="http://www.ntop.org"
 depends=('libevent' 'libpcap>=1.0.0' 'gd' 'glib' 'libxml2' 'openssl' 'gdbm' 'rrdtool>=1.3.5' 'pcre' 'geoip' 'lua')
 options=('!libtool' '!makeflags')
 install=ntop.install
-source=(http://downloads.sourceforge.net/sourceforge/ntop/ntop-$pkgver.tar.gz
+source=(http://downloads.sourceforge.net/sourceforge/ntop/ntop-${pkgver}.tar.gz
         ntop.confd ntop.rcd)
 
 build() {
@@ -34,10 +34,9 @@ build() {
             ln -sf ../../lib${_plug} ${_plug}
         done
     ) || return 1
+
+    install -dm755 --owner=nobody --group=nobody ${pkgdir}/var/lib/ntop/rrd || return 1
 }
-md5sums=('6e2ffa90d5f935c8f03d88a5dd19a866'
-         ''
-         '')
 md5sums=('6e2ffa90d5f935c8f03d88a5dd19a866'
          'b4ea63012f94c2988e767e78ac16a309'
          '76acde24cc5f428ff862d7c0815feb14')
