upgpkg: foomatic 4.0.4_20100218-1 fix perl files location, #18221
git-svn-id: file:///srv/repos/svn-packages/svn@71747 eb2447ed-0c53-47e4-bac8-5bc4a241df78

--- a/foomatic/trunk/PKGBUILD
+++ b/foomatic/trunk/PKGBUILD
@@ -13,7 +13,7 @@ source=(http://www.linuxprinting.org/download/foomatic/$pkgbase-{filters,db-engi
         http://www.linuxprinting.org/download/foomatic/$pkgbase-db-4.0-${_snapdate}.tar.gz
         http://www.linuxprinting.org/download/foomatic/$pkgbase-db-nonfree-${_snapdate}.tar.gz)
 url="http://www.linuxprinting.org/foomatic.html"
-options=('force')
+options=('force' '!emptydirs')
 md5sums=('f67fc793ee8d4d076c6671d6e6a72367'
          '675999e0ab8d59ad34a805c378830354'
          '88e4498390ad82ff13f8c7f43520e786'
@@ -69,12 +69,12 @@ package_foomatic-db-engine() {
    make || return 1
    eval `perl -V:archname`
    make DESTDIR=${pkgdir} \
-        INSTALLARCHLIB=/usr/lib/perl5/current/${archname} \
-        INSTALLSITELIB=/usr/lib/perl5/site_perl/current/ \
-        INSTALLSITEARCH=/usr/lib/perl5/site_perl/current/${archname} install || return 1
+        INSTALLARCHLIB=/usr/lib/perl5/vendor_perl/ \
+        INSTALLSITELIB=/usr/lib/perl5/vendor_perl/ \
+        INSTALLSITEARCH=/usr/lib/perl5/vendor_perl/ install || return 1
    /usr/bin/find ${pkgdir} -name '.packlist' -delete
    # fix permissions
-   chmod 755 ${pkgdir}/usr/lib{,/perl5,/perl5/site_perl}
+   chmod 755 ${pkgdir}/usr/lib{,/perl5,/perl5/vendor_perl}
 }
 
 package_foomatic-db-nonfree() {
