git-svn-id: file:///srv/repos/svn-packages/svn@71752 eb2447ed-0c53-47e4-bac8-5bc4a241df78

--- a/gvim/trunk/PKGBUILD
+++ b/gvim/trunk/PKGBUILD
@@ -3,9 +3,9 @@
 
 pkgname=gvim
 _srcver=7.2
-_patchlevel=368
+_patchlevel=385
 pkgver=${_srcver}.${_patchlevel}
-pkgrel=3
+pkgrel=1
 pkgdesc="the vim text editor with advanced features enabled, such as a gui mode"
 arch=('i686' 'x86_64')
 license=('custom:vim')
@@ -65,6 +65,12 @@ package() {
     cd ${_mandir}
       rm -f ex.1 view.1       # provided by (n)vi
       rm -f rvim.1 rview.1 vim.1 vimtutor.1 vimdiff.1 xxd.1  # provided by vim
+      for i in rgvim gvim gview rgview; do
+        rm -f $i.1
+	ln -sf vim.1.gz $i.1
+      done
+      rm -f gvimdiff.1
+      ln -sf vimdiff.1.gz gvimdiff.1
   done
 
    # clean all settings and controls -  served by vim package
