upgpkg: enscript 1.6.5.1-1 upstream update to 1.6.5.1, added enscript.cfg to backup array
git-svn-id: file:///srv/repos/svn-packages/svn@71781 eb2447ed-0c53-47e4-bac8-5bc4a241df78

--- a/enscript/trunk/PKGBUILD
+++ b/enscript/trunk/PKGBUILD
@@ -3,14 +3,15 @@
 # Contributor: Tom Newsom <Jeepster@gmx.co.uk>
 
 pkgname=enscript
-pkgver=1.6.5
+pkgver=1.6.5.1
 pkgrel=1
 pkgdesc="Convert ASCII files to PostScript suitable for printing"
 arch=(i686 x86_64)
+backup=('etc/enscript/enscript.cfg')
 depends=('glibc')
 license=('GPL2')
 source=(ftp://ftp.gnu.org/gnu/$pkgname/$pkgname-$pkgver.tar.gz)
-md5sums=('3cfd9278011215ac4c798ce984a180b7')
+md5sums=('2d9568800bfa2831c82b6e216adaad78')
 url="http://git.savannah.gnu.org/cgit/enscript.git"
 
 build() {
